# comps

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  README.rst  environment.yaml  environment.yml  meta.yaml  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.cfg
.github/workflows/: sphinx-doc-pages.yaml
comps/: conftest.py  main.py  match.py  xfmr.py
comps/datasets/: _base.py
comps/datasets/data/bank/: bank_descr.rst
comps/tests/: test_match.py
comps/utils/: tools.py
doc/source/: conf.py  development.rst  index.rst  matching_methods.rst  roadmap.rst
doc/source/_static/css/: custom.css
doc/source/concepts/: distance.rst  group-similarity.rst  index.rst  matching-methods.rst  matching.rst  similarity.rst
doc/source/decisions/: adr-000-template.rst  adr-001-numpy-compute.rst  adr-002-xfmr.rst  cdr000-template.rst  cdr001-compute-and-data.rst  cdr002-distance.rst  cdr00X-datahub.rst  index.rst
doc/source/reference/: distance.rst  index.rst  xfmr.rst
src/comps/: __init__.py  match.py  plot.py  summary.py
src/comps/datahub/: __init__.py  base.py  dict.py  pandas.py
src/comps/match/: balance.py  base.py  distance.py  facade.py  method.py  scenario.py
src/comps/match/distance/: __init__.py  base.py  distances.py  engine.py  sklearn.py  spark.py
src/comps/match/method/: base.py  selector.py  sklearn.py
src/comps/prepare/: normalize.py
src/comps/utils/: tools.py
src/comps/xfmr/: __init__.py  dict.py  pandas.py  xfmr.py
tests/: conftest.py  test_bunch_fixture.py
tests/data/bank/: README.rst  bank-full.csv  bank-full.parquet  bank.csv  bank.parquet
tests/data/lalonde/: README.rst  lalonde.csv  lalonde.parquet  nswre74_control.csv  nswre74_treated.csv
tests/datahub/: test_base.py  test_dict.py  test_pandas.py
tests/match/distance/: test_base.py  test_distances.py  test_sklearn.py  test_spark.py
tests/utils/: test_tools.py
tests/xfmr/: test_base.py  test_dict.py  test_pandas.py
