[metadata]
name = comps
version = 0.0.1.dev0
author = The Comps develpment team 
description = Comparing things
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cksisu/comps
license = BSD-3-Clause
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/cksisu/comps/issues
    Source Code = https://github.com/cksisu/comps

[options]
package_dir =
    = comps 
packages = find:
install_requires =
    scikit-learn>=0.21.0
    statsmodels>=0.11.0
python_requires = >=3.7.1
include_package_data = True
zip_safe = False

[options.packages.find]
where = comps
